# icp-examples

./: .gitignore  README.md
benchmark/: README.md
benchmark/datas/: data1
benchmark/generators/: std  std.cpp
benchmark/message_queue/: result1  result_std
benchmark/named_pipe/: named_pipe_receiver.cpp  named_pipe_sender.cpp  result2  result3  result_std  sender
benchmark/pipe/: pipe  result_std
benchmark/protocol_buffer/: result1  result2  result3  result_std
benchmark/protocol_buffer/examples/: CMakeLists.txt
benchmark/protocol_buffer/examples/sender/: CMakeLists.txt  sender.cc
benchmark/shared_memory/: result1  result2  result_std  shm_receiver.cpp
icp_benchmark/datas/: data3
icp_benchmark/generators/: gen  gen1.cpp  gen2.cpp  gen3.cpp
icp_benchmark/message_queue/: queue_receiver.cpp  queue_sender.cpp  receiver  result2  result3  sender
icp_benchmark/named_pipe/: receiver  result1
icp_benchmark/pipe/: pipe.cpp  result1  result2  result3
icp_benchmark/protocol_buffer/protos/: msgbook.proto
icp_benchmark/shared_memory/: receiver  result3  sender  shm_sender.cpp
message_queue/: README.md  queue_receiver_1.cpp  queue_receiver_2.cpp  queue_sender.cpp
named_pipe/: README.md  named_pipe_cliente.cpp  named_pipe_receiver.cpp  named_pipe_sender.cpp  named_pipe_server.cpp
pipe/: README.md  pipe.cpp
protocol_buffer/: README.md
protocol_buffer/examples/receiver/: receiver.cc
protocol_buffer/examples/sender/: sender.cc
protocol_buffer/protos/: msgbook.proto  msgbook.proto~
shared_memory/: README.md  shm_receiver.cpp  shm_sender.cpp
(+4 files in other folders)
